Corrected result error in Jun Deb Round 1

--- a/data/2013/debating_results.yaml
+++ b/data/2013/debating_results.yaml
@@ -16,7 +16,7 @@ Debating (Junior):
     Results:
       - Brigidine      def Normanhurst
       - Pymble         def OLMC
-      - MLC            def StCatherines
+      - StCatherines   def MLC
       - Monte          def Tara
       - Danebank       def Abbotsleigh
       - Ascham         def StPatricks
