Corrected my mistake in Round 1 Jun Deb
Abbotsleigh def Danebank, not the other way around.

--- a/data/2013/debating_results.yaml
+++ b/data/2013/debating_results.yaml
@@ -18,7 +18,7 @@ Debating (Junior):
       - Pymble         def OLMC
       - StCatherines   def MLC
       - Monte          def Tara
-      - Danebank       def Abbotsleigh
+      - Abbotsleigh    def Danebank
       - Ascham         def StPatricks
       - Armidale       def StVincents
       - PLCS           def Ravenswood
