Senior Public Speaking entered

--- a/data/2013/debating_results.yaml
+++ b/data/2013/debating_results.yaml
@@ -154,7 +154,7 @@ Debating (Senior):
       - Ascham          def StPatricks
 
   SemiFinal:
-    Ready?: false
+    Ready?: true
     Schools: >
       Monte Abbotsleigh Ascham SCEGGS
     Results:
