--- a/data/2013/results.yaml
+++ b/data/2013/results.yaml
@@ -71,9 +71,13 @@
    - OLMC
 
 - Section: Public Speaking (Senior)
-  Places: ""
+  Places: "1. Kirribilli  2. Pymble  3. SCEGGS  4. StPatricks  5. Abbotsleigh"
   Nonparticipants:
    - Ascham
+   - Danebank
+   - MLC
+   - Queenwood
+   - StVincents
 
 # ------------------ O t h e r ------------------------------------- #
 
