REQ data entered

--- a/data/2013/results.yaml
+++ b/data/2013/results.yaml
@@ -91,12 +91,17 @@
    - StPatricks
 
 - Section: Religious and Ethical Questions
-  Places: ""
+  Places: "1. PLCS  2. Canberra  3. StCatherines  4. Meriden  5. Santa"
   Nonparticipants:
-   - Ascham
-   - OLMC
-   - Queenwood
-   - StPatricks
+    - Ascham
+    - Brigidine
+    - MLC
+    - Monte
+    - OLMC
+    - Queenwood
+    - Ravenswood
+    - StPatricks
+    - Tara
 
 # Kambala and Monte are "TBC" for Drama, but both have submitted student names
 # indicating non-participation.
