Data entered: Senior Debating grand final, Senior Poetry

--- a/data/2013/debating_results.yaml
+++ b/data/2013/debating_results.yaml
@@ -162,9 +162,9 @@ Debating (Senior):
       - Abbotsleigh     def SCEGGS
 
   GrandFinal:
-    Ready?: false
+    Ready?: true
     Schools: >
-      xyz
+      Ascham Abbotsleigh
     Results:
-      - xyz             def xyz
+      - Abbotsleigh     def Ascham
 
