--- a/data/2013/results.yaml
+++ b/data/2013/results.yaml
@@ -68,9 +68,13 @@
    - Tara
 
 - Section: Poetry (Senior)
-  Places: ""
+  Places: "1. SCEGGS  2. Ravenswood  3. Kirribilli  4. Danebank  5. Pymble"
   Nonparticipants:
-   - OLMC
+    - Ascham
+    - Kambala
+    - OLMC
+    - Roseville
+    - StCatherines
 
 - Section: Public Speaking (Senior)
   Places: "1. Kirribilli  2. Pymble  3. SCEGGS  4. StPatricks  5. Abbotsleigh"
