Removed 4th and 5th places from Current Affairs
It was run differently in 2013 compared to previously, and this meant
that only three places could be awarded.

--- a/data/2013/results.yaml
+++ b/data/2013/results.yaml
@@ -90,7 +90,7 @@
 # ------------------ O t h e r ------------------------------------- #
 
 - Section: Current Affairs
-  Places: "1. SCEGGS  2. Normanhurst  3. Santa  4. Kambala  5. Roseville"
+  Places: "1. SCEGGS  2. Normanhurst  3. Santa"
   Nonparticipants:
     - Abbotsleigh
     - Ascham
